<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.StoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/iv_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_image" />

            <Button
                android:id="@+id/btn_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/background_edittext_outline"
                android:text="@string/camera"
                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
                app:layout_constraintStart_toStartOf="@+id/iv_preview"
                app:layout_constraintTop_toBottomOf="@+id/iv_preview" />

            <Button
                android:id="@+id/btn_gallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_edittext_outline"
                android:text="@string/gallery"
                app:layout_constraintEnd_toEndOf="@+id/iv_preview"
                app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
                app:layout_constraintTop_toBottomOf="@+id/iv_preview" />

        <com.tata.storyapp_anggita.custom_view.EditText
            android:id="@+id/et_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/hint_desc"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/iv_preview"
            app:layout_constraintStart_toStartOf="@+id/iv_preview"
            app:layout_constraintTop_toBottomOf="@+id/btn_camera" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/toggle_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/share_location"
            app:layout_constraintEnd_toEndOf="@+id/et_desc"
            app:layout_constraintStart_toStartOf="@+id/et_desc"
            app:layout_constraintTop_toBottomOf="@+id/et_desc" />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/background_edittext_outline"
            android:text="@string/upload"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggle_location"
            app:layout_constraintVertical_bias="1.0" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>